@@ -3,8 +3,11 @@ package players.heuristics;
 import core.AbstractGameState;
 import core.CoreConstants;
 import core.interfaces.IStateHeuristic;
+import core.interfaces.IToJSON;
+import org.json.simple.JSONArray;
+import org.json.simple.JSONObject;
 
-public class WinPlusHeuristic extends WinOnlyHeuristic {
+public class WinPlusHeuristic extends WinOnlyHeuristic implements IToJSON {
 
     double scale;
     public WinPlusHeuristic(double scale) {
@@ -13,7 +16,7 @@ public class WinPlusHeuristic extends WinOnlyHeuristic {
     @Override
     public double evaluateState(AbstractGameState gs, int playerId) {
         if (gs.isNotTerminalForPlayer(playerId))
-            return Math.max(0.05, Math.min(gs.getHeuristicScore(playerId) / scale, 0.95));
+            return Math.clamp(gs.getHeuristicScore(playerId) / scale, 0.05, 0.95);
 
         return super.evaluateState(gs, playerId);
     }
@@ -24,6 +27,21 @@ public class WinPlusHeuristic extends WinOnlyHeuristic {
     }
     @Override
     public int hashCode() {
-        return 5;
+        return 5 + (int) (scale * 100);
+    }
+
+    @Override
+    public String toString() {
+        return "WinPlusHeuristic: " + String.format("%.2g", scale);
+    }
+
+    @Override
+    public JSONObject toJSON() {
+        JSONObject retValue = new JSONObject();
+        JSONArray args = new JSONArray();
+        args.add(scale);
+        retValue.put("class", "players.heuristics.WinPlusHeuristic");
+        retValue.put("args", args);
+        return retValue;
     }
 }
